--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container">
     <aside class="sidebar">
-      <img src="images/profile.jpg" alt="Ankush Dhiman" class="profile-pic" />
+      <img src="images/profile.png" alt="Ankush Dhiman" class="profile-pic" />
       <h2>Ankush Dhiman</h2>
       <p>Flutter & Android Developer</p>
       <div class="social-icons">
@@ -63,7 +63,7 @@
             <p>Kotlin, Dart, Java, C++</p>
           </div>
           <div class="skill">
-            <i class="fab fa-flutter"></i>
+            <img src="icons/centralized.png" class="icon" />
             <h4>Frameworks</h4>
             <p>Flutter, Android SDK</p>
           </div>
