--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <p>Kotlin, Dart, Java, C++</p>
           </div>
           <div class="skill">
-            <img src="icons/centralized.png" class="icon" />
+            <img src="icons/centralized.png" />
             <h4>Frameworks</h4>
             <p>Flutter, Android SDK</p>
           </div>
